--- a/css/header.css
+++ b/css/header.css
@@ -1,64 +1,88 @@
+/*Comienzo el header*/
 header{
-    width: 100%;
+    /*Ancho del header*/
+    grid-column: 1/-1;
+    /*Declaro grid interior*/
     display: grid;
-    grid-template-areas: 'menu title title login';
-    height: 10vh;
+    grid-template-columns: [nav-start] 5vw [nav-end] 60vw [title-end] minmax(auto, max-content) [interaction-end];
 }
+/*Diseño del logo*/
 .header__logo{
-    grid-area: title;
-    font-size: 5rem;
+    /*Colocado*/
+    grid-column: nav-end/title-end;
+    /*Colocacion*/
     justify-self: center;
     align-self: center;
-}
-.header__userInteraction{
-    font-size: 2rem;
-    display: flex;
-    justify-self: end;
-    padding: 0 3rem;
-    align-items: center;
-}
-.header__userInteraction button{
-    margin: 3rem;
-}
-.header__userInteraction__shop{
-    width: min-content;
-    height: 100%;
-    border: none;
-    background-color: transparent;
-}
-.ph-shopping-cart-simple{
-    font-size: 4rem;
+    /*Color*/
     color: var(--secondary);
 }
-
+/*Colocacion de botones*/
+.header__userInteraction{
+    /*Colocado*/
+    grid-column: title-end/interaction-end;
+    /*Tamaño icono*/
+    font-size: 2rem;
+    /*Necesario para row*/
+    display: flex;
+    /*Alienado*/
+    align-items: center;
+    background-color: red;
+}
+/*Boton de carrito*/
+.header__userInteraction__shop{
+    /*Quitando bordes por defecto*/
+    border: none;
+    background-color: transparent;
+    /*Defino cursor*/
+    cursor: pointer;
+}
+/*Editando icono*/
+.ph-shopping-cart-simple{
+    /*Tamaño*/
+    font-size: 4rem;
+    /*Color*/
+    color: var(--secondary);
+}
 .header__userInteraction__container{
-    display: flex
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
+/*Definiendo agrupacion de los botones login y registro*/
 .header__userInteraction__container button {
-cursor: pointer;
-border: 0;
-border-radius: .4rem;
-font-weight: 600;
-margin: 0 .1rem;
-font-size: 2rem;
-padding: 1rem 2rem;
-box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
-transition: 0.4s;
+    /*Cursor*/
+    cursor: pointer;
+    /*Elimino bordes*/
+    border: 0;
+    /*Bordes redondos de 4px*/
+    border-radius: .4rem;
+    /*Margen laterales*/
+    margin: 0 .1rem;
+    /*tamaño de la fuente*/
+    font-size: 3vw;
+    /*pading vertical y horizontal*/
+    padding: 1rem 2vw;
+    /*Sombreado*/
+    box-shadow: 0 0 2rem var(--secondaryCeroSeis);
+    /*transicion*/
+    transition: 0.4s;
 }
-
+/*Diseño de registrar*/
 .header__userInteraction__container__register {
 color: white;
-background-color: rgba(104, 85, 224, 1);
+background-color: var(--secondary);
 }
-
+/*Diseño de login*/
 .header__userInteraction__container__login {
-color: rgb(104, 85, 224);
+color: var(--secondary);
 background-color: rgba(255, 255, 255, 1);
-border: 1px solid rgba(104, 85, 224, 1);
+border: .1rem solid var(--secondary);
 }
-
+/*Diseño de hover*/
+/*Registrar y login*/
 .header__userInteraction__container button:hover {
 color: white;
-box-shadow: 0 0 20px rgba(104, 85, 224, 0.6);
-background-color: rgba(104, 85, 224, 1);
+box-shadow: 0 0 2rem var(--secondaryCeroSeis);
+background-color: var(--secondary);
 }
