--- a/css/hero.css
+++ b/css/hero.css
@@ -1,6 +1,13 @@
+main{
+    grid-row: 2/-2;
+    grid-column: 2/-2;
+    display: grid;
+    grid-template-rows: [hero-start]90vh[hero-end];
+}
 #hero{
-    height: 60vh;
-    width: 100%;
+    grid-row: hero-start/hero-end;
+    background-color: red;
+        
 }
 .hero__background{
     background-image: url(../img/background.jpg);
