--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Montserrat:wght@200;400;600&display=swap');
 *{
     /*Establezco el tamaño a 10px con el porcentaje*/
     font-size: 62.5%;
@@ -6,10 +7,14 @@
     /* Establezco padding y margin a 0*/
     padding: 0;
     margin: 0;
-    /* Uso la fuente*/
-    font-family: 'Nunito', sans-serif;
     /* Establezco el box sizing como border box*/
     box-sizing: border-box;
+    /*Quito decoracion del texto*/
+    text-decoration: none;
+    /*Fuente por defecto*/
+    font-family: 'Montserrat', sans-serif;
+    /*Ancho por defecto*/
+    font-weight: 400;
 }
 /* Declaracion de variables*/
 :root{
@@ -21,10 +26,22 @@
     /* Para los hover */
     --letter-hover : #fff;
     /* Color secundario */
-    --secondary: #FFAB40;
+    --secondary: rgb(104, 85, 224);
+    --secondaryCeroSeis: rgba(104, 85, 224,0.6);
 }
 /* Declaro el body y sus caracteristicas*/
 body{
     display: grid;
-    
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: [header-start] 10vh [hero-start] 90vh [hero-end] repeat(2,[row-start] 100vh[row-end]) [footer-start] minmax(min-content,60vh) [footer-end];
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+h1{
+    font-family: 'Cinzel Decorative', serif;
+    font-size: 10vw;
+}
+h2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
 }
