--- a/css/hero.css
+++ b/css/hero.css
@@ -1,17 +1,20 @@
-main{
-    grid-row: 2/-2;
-    grid-column: 2/-2;
-    display: grid;
-    grid-template-rows: [hero-start]90vh[hero-end];
-}
 #hero{
     grid-row: hero-start/hero-end;
-    background-color: red; 
-}
-.hero__background{
+    width: 100%;
+    height: 100%;
     background-image: url(../img/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 40%;
-    width: 40%;
+    display: flex;
+    align-items: center;
+    padding-left: 10rem;
+}
+#hero .hero__info{
+    background-color: white;
+    padding: 3rem;
+    width: max-content;
+}
+.hero__info__p{
+    padding-top: 1rem;
+    max-width: 50rem;
 }
