--- a/css/normalize.css
+++ b/css/normalize.css
@@ -33,8 +33,8 @@
 /* Declaro el body y sus caracteristicas*/
 body{
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: [header-start] minmax(10vh,15vh) [main-start] 85vh [hero-end] repeat(2,[row-start] 100vh[row-end]) [footer-start] minmax(min-content,60vh) [footer-end];
+    grid-template-columns: repeat(12, minmax(max-content, 1fr));
+    grid-template-rows: [header-start] minmax(10vh,max-content) [main-start] 85vh [hero-end] repeat(2,[row-start] 100vh[row-end]) [footer-start] minmax(min-content,60vh) [footer-end];
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
@@ -46,9 +46,14 @@ h2{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-size: 3rem;
+    color: var(--primary);
 }
 p{
     font-family: 'Montserrat', sans-serif;
     font-weight: 200;
     font-size: 1.5rem;
+    color: var(--primary);
+}
+a{
+    color: var(--secondary);
 }
