--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 main{
     grid-row: 2/-2;
     grid-column: 2/-2;
+}
+#index{
     display: grid;
-    grid-template-rows: [hero-start]85vh[hero-end];
-    background-color: rebeccapurple;
+    grid-template-rows: [hero-start]90vh[hero-end]100vh[banner-end];
 }
