--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -13,10 +13,42 @@
     font-size: 3rem;
     border: .1rem solid var(--secondary);
     padding: 2rem;
+    flex-basis: 30%;
+    gap: 2rem;
 }
 .catalogo__producto__content{
     width: 60%;
 }
 .catalogo__producto__content__img{
     width: 100%;
+}
+.catalogo__producto__name{
+    text-transform: uppercase;
+}
+.catalogo__producto__price{
+    font-weight: 400;
+}
+.catalogo__producto .button__purple{
+    color: var(--secondary);
+    text-transform: uppercase;
+    /*Cursor*/
+    cursor: pointer;
+    /*Elimino bordes*/
+    border: 0;
+    /*Bordes redondos de 4px*/
+    border-radius: .4rem;
+    /*Margen laterales*/
+    margin: 0 .1rem;
+    /*tamaño de la fuente*/
+    font-size: 1.5rem;
+    /*pading vertical y horizontal*/
+    padding: 1rem 2vw;
+    /*Sombreado*/
+    box-shadow: 0 0 2rem var(--secondaryCeroSeis);
+    /*transicion*/
+    transition: 0.4s;
+}
+.catalogo__producto .button__purple:hover{
+    background-color: var(--secondary);
+    color: white;
 }
