--- a/css/header.css
+++ b/css/header.css
@@ -34,6 +34,7 @@ header{
     display: flex;
     /*Alienado*/
     align-items: center;
+    gap: 2rem;
 }
 /*Boton de carrito*/
 .header__userInteraction__shop{
