--- a/css/nav.css
+++ b/css/nav.css
@@ -28,8 +28,8 @@
 /* Estilo para el contenedor del botón del menú */
 .menu-button-container {
   display: flex;
-  top: 3%;
-  left: 3%;
+  top: 2vh;
+  left: 3vw;
   height: 5rem;
   width: 4rem;
   cursor: pointer;
@@ -97,7 +97,7 @@
   transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 #menu-toggle:checked ~ .menu li {
-  font-size: 3rem;
+  font-size: 5rem;
   height: 4em;
   display: flex;
   align-items: center;
@@ -107,4 +107,10 @@
   color: white;
   font-weight: 600;
   text-align: center;
+  max-height: min-content;
+  padding: 1rem;
+}
+#menu-toggle:checked ~ .menu li a:hover{
+  border-bottom: .3rem solid white;
+  margin-bottom: -0.3rem;
 }
