--- a/css/banner.css
+++ b/css/banner.css
@@ -29,6 +29,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    overflow-x: hidden;
 }
 .items {
     transform: translate(-50%, -50%);
@@ -40,8 +41,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 250px;
-    height: 250px;
+    width: 25rem;
+    height: 25rem;
     border-radius: 50%;
     overflow: hidden;
     transition: all 300ms ease-in-out;
@@ -57,7 +58,7 @@
   
 .item.active {
     opacity: 1;
-    z-index: 99;
+    z-index: 3;
     box-shadow: 0px 0px 105px -35px rgba(0, 0, 0, 0.75);
 }
   
