--- a/css/detalle.css
+++ b/css/detalle.css
@@ -1,7 +1,6 @@
 #detalle{
     display: grid;
-    
-    grid-template-columns: 30% 40% 30%;
+    grid-template-columns: repeat(3,1fr);
     margin-top: 3rem;
     margin-bottom: 3rem;
     gap: 2rem;
@@ -77,6 +76,12 @@
     align-items: center;
     flex-direction: column;
     gap: 3rem;
+}
+#detalle__Productos .detalle__productos__listado{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 3rem;
 }
 #detalle__Productos article{
    border: .1rem solid black; 
