--- a/css/registro.css
+++ b/css/registro.css
@@ -35,6 +35,8 @@
 
 #login__register span, #login__register a, #login__register i{
     font-size: 1.5rem;
+	background-color: white !important;
+	padding: 0 .6rem;
 }
 #login__register form {
 	background-color: #FFFFFF;
@@ -43,7 +45,7 @@
 	justify-content: center;
 	flex-direction: column;
 	padding: 0 50px;
-	height: 100%;
+	height: 90%;
 	text-align: center;
 }
 
@@ -63,9 +65,10 @@
 			0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
-	width: 768px;
+	width: 76.8rem;
 	max-width: 100%;
 	min-height: 480px;
+	border: .1rem solid #eee;
 }
 
 #login__register .form-container {
@@ -191,4 +194,13 @@
 	margin: 0 5px;
 	height: 40px;
 	width: 40px;
+}
+.optional{
+	background-color: transparent !important;
+	color: var(--secondary) !important;
+	padding: 0 !important;
+	border: none !important;
+	margin-left: 1rem;
+	background-color: white !important;
+	cursor: pointer;
 }
