--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -1,9 +1,8 @@
 #catalogo{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(35rem, 1fr));
     margin: 2rem 0;
-    row-gap: 2rem;
+    gap: 2rem;
 }
 .catalogo__producto{
     display: flex;
