--- a/css/registro.css
+++ b/css/registro.css
@@ -204,3 +204,22 @@
 	background-color: white !important;
 	cursor: pointer;
 }
+
+/* MEDIA QUERY PARA VISTAS MENORES QUE 992px */
+@media screen and (max-width: 992px) {
+    .sign-in-container{
+        width: 100% !important;
+    }
+    .container.right-panel-active .sign-in-container{
+        transform: translateX(0%) !important;
+    }
+    #login__register .container.right-panel-active .sign-up-container{
+        transform: translateX(0%) !important;
+    }
+    .sign-up-container{
+        width: 100% !important;
+    }
+    .overlay-container{
+        display: none;
+    }
+}
