--- a/css/banner.css
+++ b/css/banner.css
@@ -117,3 +117,13 @@
 .button-container .button:nth-child(2) {
     float: right;
 }
+
+/* MEDIA QUERY PARA VISTAS MENORES QUE 992px */
+@media screen and (max-width: 992px) {
+    .slider__item {
+        flex: 1 0 100%; /* Ajusta el crecimiento y el encogimiento del ítem según tus necesidades */
+    }
+    .item.active{
+        box-shadow: 0px 0px 0px !important;
+    }
+}
