--- a/css/detalle.css
+++ b/css/detalle.css
@@ -1,13 +1,9 @@
 #detalle{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    grid-template-columns: repeat(auto-fit,minmax(30rem,1fr));
     gap: 2rem;
 }
 #detalle__Galeria{
-    
-    grid-column: 1/2;
     display: grid;
     grid-template-columns: repeat(2,50%);
     grid-template-rows: 60vh,40vh;
@@ -36,7 +32,6 @@
 }
 #detalle__Texto{
     border: .1rem solid black;
-    grid-column: 2/3;
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -69,7 +64,6 @@
     border: .1rem solid black;
 }
 #detalle__Productos{
-    grid-column: 3/4;
     overflow-y: scroll;
     height: 110vh;
     display: flex;
