--- a/css/rrss.css
+++ b/css/rrss.css
@@ -2,15 +2,15 @@
     grid-row: banner-end/contact-end;
     display: flex;
     flex-direction: column;
-
+    row-gap: 2rem;
+    align-items: center;
 }
 #rrss{
     display: flex;
-    max-height: 50vh;
+    max-width: 50%;
 }
 .rrss__galery{
     display: flex;
-    width: 100vh;
     padding: 3rem;
 }
 .rrss__galery__photo{
@@ -86,11 +86,6 @@
 @media screen and (max-width: 992px) {
     #rrss{
         flex-direction: column;
-        align-items: center;
-    }
-    .rrss__galery{
-        display: flex;
         max-width: 100%;
-        height: 100%;
     }
 }
